samples/_failures_safe/1761154036_1a3ef4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72caea4a.c: In function ‘main’:
./samples/SAFE/__tmp_72caea4a.c:173:5: error: expected declaration or statement at end of input
  173 |     printf("Tokens:\n");
      |     ^~~~~~
